syntax = "proto3";
package main;
option go_package = "./proto";

import "google/api/annotations.proto";

service MoviesApi {
    rpc GetMovies(GetMoviesRequest) returns (MoviesResponse) {
        option (google.api.http) = {
            get: "/v1/movies";
        };
    }

    rpc GetMovieByID(GetMovieByIDRequest) returns (MovieByIDResponse) {
        option (google.api.http) = {
            get: "/v1/movies/{id}"
        };
    }
}

message GetMoviesRequest {
    string searchword = 1;
    int32 page = 2;
}

message GetMovieByIDRequest {
    string id = 1;
}

message MoviesResponse {
    repeated MovieResponse Search = 1;
}

message MovieResponse {
    string Title = 1;
    string Year = 2;
    string imdbID = 3;
    string Type = 4;
    string Poster = 5;
}

message MovieByIDResponse {
    string Title = 1;
    string Year = 2;
    string Rated = 3;
    string Released = 4;
    string Runtime = 5;
    string Genre = 6;
    string Director = 7;
    string Writer = 8;
    string Actors = 9;
    string Plot = 10;
    string Language = 11;
    string Country = 12;
    string Awards = 13;
    string Poster = 14;
    repeated Ratings Ratings = 15;
    string Metascore = 16;
    string imdbRating = 17;
    string imdbVotes = 18;
    string imdbID = 19;
    string Type = 20;
    string DVD = 21;
    string BoxOffice = 22;
    string Production = 23;
    string Website = 24;
}

message Ratings {
    string Source = 1;
    string Value = 2;
}